--- a/src/main/resources/static/views/todoList.html
+++ b/src/main/resources/static/views/todoList.html
@@ -93,7 +93,7 @@
                 <td>{{task.deadline | date:'mediumDate'}}</td>
                 <td>
                     <a href ng-click="openEdit(task)"><i class="fa fa-pencil"></i></a>&nbsp;
-                    <a href ng-click="delete(task.id)"><i class="fa fa-trash-o"></i></a>&nbsp;
+                    <a href ng-click="openDelete(task.id)"><i class="fa fa-trash-o"></i></a>&nbsp;
                 </td>
             </tr>
             </tbody>
