--- a/src/main/resources/static/views/confirmFilePrDelete.html
+++ b/src/main/resources/static/views/confirmFilePrDelete.html
@@ -1,9 +1,9 @@
-<div class="modal fade m-r--16" id="deletingProjectModal">
+<div class="modal fade m-r--16" id="deletingFilePrModal">
     <div class="modal-dialog">
         <div class="panel panel-yellow">
             <div class="panel-heading">
                 Delete Project
-                <button type="button" class="close" ng-click="close('#deletingProjectModal')" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#deletingFilePrModal')" aria-hidden="true">&times;</button>
             </div>
             <div class="panel-body pan">
                 <form name="deletingProjectForm" role="form" novalidate>
@@ -11,8 +11,7 @@
 
                         <div class="form-group">
                             <h5>
-                                Are you sure you want to delete project {{project.name}}?
-                                It will be deleted with all tasks and team.
+                                Are you sure you want to delete file {{file.name}}?
                             </h5>
                         </div>
                         <div ng-if="errorMessage" class="alert alert-danger m-t-15">{{ errorMessage }}</div>
@@ -21,10 +20,10 @@
                         <button
                                 type="submit"
                                 class="btn btn-blue"
-                                ng-click="delete('projects', projectId, '#deletingProjectModal')">
+                                ng-click="delete('projects/' + projectId + '/files', file.id, '#deletingFilePrModal')">
                             Delete
                         </button>
-                        <button type="button" class="btn btn-default" ng-click="close('#deletingProjectModal')">
+                        <button type="button" class="btn btn-default" ng-click="close('#deletingFilePrModal')">
                             Cancel
                         </button>
                     </div>
