project bugs fixed front + back

--- a/src/main/resources/static/views/projectInfo-tl.html
+++ b/src/main/resources/static/views/projectInfo-tl.html
@@ -1,4 +1,5 @@
-<div>
+<div ng-if="errorProject"><h4>&nbsp;{{errorProject}}</h4></div>
+<div ng-if="!errorProject">
     <div id="title-breadcrumb-option-demo" class="page-title-breadcrumb">
         <div class="page-header pull-left">
             <div class="page-title">
