--- a/src/main/resources/static/views/newTaskForProject.html
+++ b/src/main/resources/static/views/newTaskForProject.html
@@ -11,7 +11,7 @@
                     <div class="form-body pal">
                         <div class="form-group">
                             <label for="t_p_description" class="control-label">
-                                Description*
+                                Title*
                             </label>
                             <div ng-class="{
                                     'has-error' :
@@ -25,8 +25,12 @@
                                             rows="5"
                                             class="form-control"
                                             ng-model="task.description"
+                                            ng-maxlength="255"
                                             required
                                     ></textarea>
+                                <small  ng-if="newProjectTaskForm.t_p_description.$error.maxlength && !newProjectTaskForm.t_p_description.$pristine">
+                                    Too long
+                                </small>
                             </div>
                         </div>
                         <div class="form-group">
@@ -39,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <label for="assignedTo" class="control-label">
-                                Developer*
+                                Developer
                             </label>
                             <div
                              ng-class="{
@@ -52,8 +56,7 @@
                                     id="assignedTo"
                                     name="assignedTo"
                                     ng-model="task.assignedTo"
-                                    ng-options="developer as developer.firstName + ' ' + developer.lastName for developer in developers"
-                                    required>
+                                    ng-options="developer as developer.firstName + ' ' + developer.lastName for developer in developers">
                                 <option value="">Choose who will do the task</option>
                             </select>
                                 </div>
