--- a/src/main/resources/static/views/todoList.html
+++ b/src/main/resources/static/views/todoList.html
@@ -77,7 +77,7 @@
                             'label label-sm label-success': task.priority == 'NORMAL',
                             'label label-sm label-info': task.priority == 'LOW'
                         }">
-                        {{task.priority}}
+                        {{task.priority | capitalize | underscoreless}}
                     </span>
                 </td>
                 <td>{{task.createDate | date:'mediumDate'}}</td>
@@ -87,7 +87,7 @@
                             'label label-sm label-warning': task.status == 'IN_PROGRESS',
                             'label label-sm label-success': task.status == 'COMPLETE'
                         }">
-                        {{task.status}}
+                        {{task.status | capitalize | underscoreless}}
                     </span>
                 </td>
                 <td>{{task.deadline | date:'mediumDate'}}</td>
