progress bar for tasks + filters on editing

--- a/src/main/resources/static/views/signUpModal.html
+++ b/src/main/resources/static/views/signUpModal.html
@@ -151,7 +151,7 @@
                                 id="roles"
                                 name="roles"
                                 ng-model="user.role"
-                                ng-options="role for role in roles track by role"
+                                ng-options="(role | capitalize | underscoreless) for role in roles track by role"
                                 required>
                             <option value="">Please select your role</option>
                         </select>
