--- a/src/main/resources/static/views/editTodoTask.html
+++ b/src/main/resources/static/views/editTodoTask.html
@@ -46,7 +46,7 @@
                                                 id="priority"
                                                 name="priority"
                                                 ng-model="task.priority"
-                                                ng-options="priority for priority in priorities track by priority"
+                                                ng-options="(priority | capitalize | underscoreless) for priority in priorities track by priority"
                                                 required>
                                             <option value="{{task.priority}}"></option>
                                         </select>
@@ -89,7 +89,7 @@
                                             value="{{status}}"
                                             ng-model="task.status"
                                     >
-                                    {{status}}&nbsp;
+                                    {{status | capitalize | underscoreless}}&nbsp;
                                 </label>
                             </div>
                         </div>
