--- a/src/main/resources/static/views/taskInfo-tl.html
+++ b/src/main/resources/static/views/taskInfo-tl.html
@@ -118,7 +118,7 @@
                     </p>
                     <div class="progress progress-sm mbn">
                         <div role="progressbar" aria-valuenow="{{taskProgress}}" aria-valuemin="0" aria-valuemax="100"
-                             ng-style="{'width':taskProgress+'%'}" class="progress-bar progress-bar-success">
+                             ng-style="{'width':taskProgress+'%'}" class="progress-bar {{taskProgressClass}}">
                             <span class="sr-only">50% Complete (success)</span>
                         </div>
                     </div>
