--- a/src/main/resources/static/views/taskInfo-tl.html
+++ b/src/main/resources/static/views/taskInfo-tl.html
@@ -11,7 +11,7 @@
             </div>
             <div class="p-t-7 m-l-10 f-r plus_ico">
                 <a href class="info-project" ng-click="openEdit(task)"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                <a href class="info-project" ng-click="openDelete()"><i class="fa fa-times" aria-hidden="true"></i></a>
+                <a href class="info-project" ng-click="openDelete(task)"><i class="fa fa-times" aria-hidden="true"></i></a>
             </div>
         </div>
 
