--- a/src/main/resources/static/views/confirmCommentTDelete.html
+++ b/src/main/resources/static/views/confirmCommentTDelete.html
@@ -1,12 +1,12 @@
-<div class="modal fade m-r--16" id="deletingCommentPrModal">
+<div class="modal fade m-r--16" id="deletingCommentTModal">
     <div class="modal-dialog">
-        <div class="panel panel-yellow">
+        <div class="panel panel-green">
             <div class="panel-heading">
                 Delete Project
-                <button type="button" class="close" ng-click="close('#deletingCommentPrModal')" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#deletingCommentTModal')" aria-hidden="true">&times;</button>
             </div>
             <div class="panel-body pan">
-                <form name="deletingCommentPrForm" role="form" novalidate>
+                <form name="deletingCommentTForm" role="form" novalidate>
                     <div class="form-body pal">
 
                         <div class="form-group">
@@ -19,11 +19,11 @@
                     <div class="form-actions text-right pal">
                         <button
                                 type="submit"
-                                class="btn btn-blue"
-                                ng-click="delete('projects/' + projectId + '/comments', comment.id, '#deletingCommentPrModal')">
+                                class="btn btn-green"
+                                ng-click="delete('projects/' + projectId + '/tasks/' + taskId + '/comments', comment.id, '#deletingCommentTModal')">
                             Delete
                         </button>
-                        <button type="button" class="btn btn-default" ng-click="close('#deletingCommentPrModal')">
+                        <button type="button" class="btn btn-default" ng-click="close('#deletingCommentTModal')">
                             Cancel
                         </button>
                     </div>
