dev task files fixed view

--- a/src/main/resources/static/views/taskInfo-dev.html
+++ b/src/main/resources/static/views/taskInfo-dev.html
@@ -151,7 +151,7 @@
                 </div>
             </div>
 
-            <div class="panel task mbm">
+            <div class="panel task mbm" ng-if="task.files.length > 0">
                 <div class="panel-body">
                     <p class="icon">
                         <i class="icon fa fa-files-o"></i>
